--- a/src/pages/Projects/index.css
+++ b/src/pages/Projects/index.css
@@ -1,5 +1,6 @@
 .projects.container{
     display: flex;
+    flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
